syntax = "proto3";

option java_multiple_files = true;
option go_package = "./";

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";
import "google/protobuf/timestamp.proto";

package com.sourceforgery.tachikoma.grpc.frontend.emailstatusevent;

service EmailStatusEventService {

    // Returns all email status events the last 7 days
    rpc GetEmailStatusEvents (GetEmailStatusEventsFilter) returns (stream EmailNotification);
}

// Filter for retrieving historic e-mail status events
message GetEmailStatusEventsFilter {

    // Only retrieve events that are newer than this timestamp
    google.protobuf.Timestamp newer_than = 101;

    // Filter events on recipient e-mail
    EmailAddress recipient_email = 102;

    // Filter events on from e-mail
    EmailAddress from_email = 103;

    // Filter events on zero or more event types
    repeated Event events = 104;

    // Whether to include tracking data in the response or not . Like all bools, defaults to false.
    bool include_tracking_data = 105;

    // Whether to include email metrics in the response or not. If true all clicks and opens per email is included in the response
    bool include_metrics_data = 106;

    // Only include events for emails with these tags.
    // Will not filter if empty.
    repeated string tags = 107;
}

// Event types available to filter on
enum Event {
    SOFT_BOUNCED = 0;
    HARD_BOUNCED = 1;
    DELIVERED = 2;
    QUEUED = 3;
    OPENED = 4;
    CLICKED = 5;
    UNSUBSCRIBED = 6;
    SPAM = 7;
}
