syntax = "proto3";

option java_multiple_files = true;
option go_package = "github.com/SourceForgery/tachikoma";

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";
import "google/protobuf/timestamp.proto";

package com.sourceforgery.tachikoma.grpc.frontend.blockedemail;

service UserService {

    // Remove frontend user from tachikoma
    rpc RemoveUser (RemoveUserRequest) returns (RemoveUserResponse);

    // Get all frontend user
    rpc GetFrontendUsers (GetUsersRequest) returns (stream FrontendUser);

    // Add frontend user
    rpc AddFrontendUser (AddUserRequest) returns (ModifyUserResponse);

    // Modify a frontend user.
    rpc ModifyFrontendUser (ModifyUserRequest) returns (ModifyUserResponse);
}


message GetUsersRequest {
    string mail_domain = 101;
}

// Represents a user's id
message UserId {
    sint64 id = 1;
}

message FrontendUser {
    // The id of the user
    UserId auth_id = 101;
    // If the user is active
    bool active = 102;
    // login of the user (optional, only set if hasPassword)
    string login = 103;
    // If the user has a password set
    bool has_password = 104;
    // If the user has an apiToken set
    bool has_api_token = 105;
    // What role the user has
    FrontendUserRole authentication_role = 106;
    // Which mail domain the user has
    string mail_domain = 107;
    // Which address _all_ emails will go to (optional)
    EmailAddress recipient_override = 108;
    // The creation date of the user
    google.protobuf.Timestamp date_created = 109;
    // The date that the user was last updated
    google.protobuf.Timestamp last_updated = 110;
}

// The response from the requested user
message ModifyUserResponse {
    // The newly created user
    FrontendUser user = 101;
    // ApiToken (optional, only available when requested )
    string api_token = 102;
}

// Request for removing a user
message RemoveUserRequest {
    UserId user_to_remove = 101;
}

// Future-proof response
message RemoveUserResponse {
}

message PasswordAuth {
    // The login of the user
    string login = 102;
    // The password to log in with
    string password = 103;
}

message AddUserRequest {
    // If the user is active
    bool active = 101;
    // The login+password of the user (optional)
    PasswordAuth password_auth = 102;
    // If the user should get an apiToken
    bool add_api_token = 103;
    // What role the user has
    FrontendUserRole authentication_role = 106;
    // Which mail domain the user has
    string mail_domain = 107;
    // Which address _all_ emails will go to (optional)
    EmailAddress recipient_override = 108;
}

message ModifyUserRequest {
    // The id of the user
    UserId auth_id = 101;
    // If the user is active
    bool active = 102;
    // The new password of the user
    // (optional and requires previous login credentials)
    string new_password = 103;
    // Set or keep
    ApiToken api_token = 104;
    // What role the user has
    FrontendUserRole authentication_role = 105;
    // Which address _all_ emails will go to (optional)
    EmailAddress recipient_override = 107;
}

enum ApiToken {
    NO_ACTION = 0;
    RESET_API_TOKEN = 1;
    REMOVE_API_TOKEN = 2;
}

enum FrontendUserRole {
    FRONTEND = 0;
    FRONTEND_ADMIN = 1;
}
